--- a/index.html
+++ b/index.html
@@ -302,7 +302,16 @@
         }
 
         function updateRemainingQuestionsCount() {
-            const remainingQuestionsCount = 9317 - getAttemptedQuestionCodes().length; // 총 문제 수에서 풀린 문제 수를 뺀다
+            const correctAnswers = loadCorrectAnswers();
+            const incorrectAnswers = loadIncorrectAnswers();
+        
+            // 총 9317개 중에서 이미 시도된 문제의 수를 빼서 남은 문제 수를 계산
+            const attemptedQuestionCodes = [
+                ...correctAnswers.map(answer => answer.questionCode),
+                ...incorrectAnswers.map(answer => answer.questionCode)
+            ];
+            const remainingQuestionsCount = 9317 - new Set(attemptedQuestionCodes).size;
+        
             document.getElementById('totalQuestionsInfo').textContent =
                 `총 9317문제 중 앞으로 풀 문제: ${remainingQuestionsCount}개`;
         }
